
[project]
authors = [{ name = "yaleman", email = "james@terminaloutcomes.com" }]
requires-python = "<4.0,>=3.12"
dependencies = [
    "schedule>=1.2.2",
    "pygoodwe>=0.1.11",
    "pvoutput>=0.1.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
]
name = "goodwe2pvoutput"
version = "0.2.0"
description = "Goodwe to PVOutput"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "mypy>=2.1.0",
    "pyright>=1.1.410",
    "ruff>=0.15.15",
    "ty>=0.0.40",
]

[project.scripts]
goodwe2pvoutput = "goodwe2pvoutput.__main__:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pyright]
exclude = ["layer_requirements/**", ".venv/**", ".terraform/**"]
